fix e2e tests for gateway